[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/yoster-island.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://StartLabel.gd" type="Script" id=3]
[ext_resource path="res://Atlases/atlas1.png" type="Texture" id=4]

[sub_resource type="TileSet" id=1]
0/name = "atlas1.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 17, 204, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "atlas1.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 17, 221, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "atlas1.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 204, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "atlas1.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 221, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "atlas1.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 34, 221, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "atlas1.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 34, 204, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "atlas1.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 34, 187, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "atlas1.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 17, 187, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "atlas1.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 68, 221, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "atlas1.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 170, 289, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "atlas1.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 187, 289, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "atlas1.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 204, 289, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "atlas1.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 187, 306, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "atlas1.png 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 170, 306, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "atlas1.png 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 272, 221, 50, 50 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0.121569, 0.117647, 0.0941176, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 56, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 16 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -103, 42 )
z_index = -1
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 17, 0, 0, 18, 2, 0, 19, 0, 0, 65553, 10, 0, 65554, 4, 0, 65555, 10, 0, 131089, 13, 0, 131090, 10, 0, 131091, 13, 0, 196625, 10, 0, 196626, 13, 0, 196627, 12, 0, 262161, 13, 0, 262162, 10, 0, 262163, 13, 0, 327697, 12, 0, 327698, 13, 0, 327699, 10, 0, 393233, 13, 0, 393234, 10, 0, 393235, 13, 0, 458769, 10, 0, 458770, 13, 0, 458771, 12, 0, 524305, 13, 0, 524306, 10, 0, 524307, 13, 0, 589841, 12, 0, 589842, 13, 0, 589843, 10, 0, 655377, 13, 0, 655378, 10, 0, 655379, 13, 0, 720913, 10, 0, 720914, 13, 0, 720915, 12, 0, 786449, 13, 0, 786450, 10, 0, 786451, 13, 0 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 144.0
margin_top = 16.0
margin_right = 247.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Box Tower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="."]
margin_left = 149.0
margin_top = 104.0
margin_right = 245.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Start Game"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartArea" type="Area2D" parent="StartLabel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartLabel/StartArea"]
position = Vector2( 43, 8 )
shape = SubResource( 4 )

[node name="LoadLabel" type="Label" parent="."]
margin_left = 136.0
margin_top = 144.0
margin_right = 252.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 3 )
text = "Continue Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadArea" type="Area2D" parent="LoadLabel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoadLabel/LoadArea"]
position = Vector2( 56, 8 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 192, 104 )
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true
[connection signal="input_event" from="StartLabel/StartArea" to="." method="_on_StartArea_input_event"]
[connection signal="mouse_entered" from="StartLabel/StartArea" to="." method="_on_StartArea_mouse_entered"]
[connection signal="mouse_exited" from="StartLabel/StartArea" to="." method="_on_StartArea_mouse_exited"]
[connection signal="input_event" from="LoadLabel/LoadArea" to="." method="_on_LoadArea_input_event"]
[connection signal="mouse_entered" from="LoadLabel/LoadArea" to="." method="_on_LoadArea_mouse_entered"]
[connection signal="mouse_exited" from="LoadLabel/LoadArea" to="." method="_on_LoadArea_mouse_exited"]
